--- a/notebooks/results_RSA.ipynb
+++ b/notebooks/results_RSA.ipynb
@@ -284,6 +284,9 @@
     "plt.tight_layout()   \n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'),\n",
     "            bbox_inches = 'tight', pad_inches=0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'),\n",
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "\n",
     "\n",
     "fig, axs = plt.subplots()\n",
     "plt.imshow(rsa_dist_rnncell, vmin=vmin, vmax=vmax)\n",
@@ -295,6 +298,9 @@
     "plt.tight_layout()   \n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'),\n",
     "            bbox_inches = 'tight', pad_inches=0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'),\n",
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "\n",
     "\n",
     "fig, axs = plt.subplots()\n",
     "plt.imshow(rsa_dist_mlp, vmin=vmin, vmax=vmax)\n",
@@ -306,6 +312,9 @@
     "plt.tight_layout()   \n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'),\n",
     "            bbox_inches = 'tight', pad_inches=0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'),\n",
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "\n",
     "\n",
     "fig, axs = plt.subplots()\n",
     "plt.imshow(rsa_dist_swmlp[:,:,0], vmin=vmin, vmax=vmax)\n",
@@ -316,6 +325,8 @@
     "fig.suptitle('Stepwise MLP - Hidden 1', fontweight='bold')\n",
     "plt.tight_layout()   \n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'),\n",
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'),\n",
     "            bbox_inches = 'tight', pad_inches=0)\n",
     "\n",
     "\n",
@@ -328,7 +339,10 @@
     "fig.suptitle('Stepwise MLP - Hidden 2', fontweight='bold')\n",
     "plt.tight_layout()   \n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'),\n",
-    "            bbox_inches = 'tight', pad_inches=0)\n"
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'),\n",
+    "            bbox_inches = 'tight', pad_inches=0)\n",
+    "\n"
    ],
    "outputs": [
     {
