--- a/notebooks/results_proportions.ipynb
+++ b/notebooks/results_proportions.ipynb
@@ -204,7 +204,9 @@
     "plt.tight_layout()\n",
     "fig_str = 'proportion_results_both_mlps_face_scatter'\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "            bbox_inches = 'tight', pad_inches = 0)"
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [
     {
@@ -265,6 +267,9 @@
     "fig_str = 'proportion_results_both_mlps_face_p_pies'\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
     "        bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "\n",
     "# hidden units selectivity \n",
     "# proportion of hidden units that were active at all (even one trial) for each context\n",
     "# we have ... many hiddens that were active for both (mixed), ... many units that were active for ctx1, so on so forth"
@@ -349,7 +354,9 @@
     "plt.tight_layout()\n",
     "fig_str = 'proportion_results_both_mlps_face_n_overCPs'\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "              bbox_inches = 'tight', pad_inches = 0)\n"
+    "              bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [
     {
@@ -417,6 +424,8 @@
     "fig_str = 'proportion_results_both_mlps_face_f_overCPs'\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
     "              bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
     "\n",
     "# n: [n_ctxs, hidden_dim] \n",
     "# normalized - for each ctx, for how many trials each unit was active (filtered by the threshold) \n",
@@ -497,7 +506,10 @@
     "plt.tight_layout()\n",
     "fig_str = 'proportion_results_both_mlps_face_n'\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "              bbox_inches = 'tight', pad_inches = 0)\n",
+    "              bbox_inches = 'tight', pad_inches = 0)]\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "\n",
     "# n: [n_ctxs, hidden_dim] \n",
     "# normalized - how much each unit is active for each ctx over trials \n",
     "# normalized by the overall activity of that unit for all ctx and trials\n",
