--- a/notebooks/results_regression.ipynb
+++ b/notebooks/results_regression.ipynb
@@ -265,6 +265,8 @@
     "fig.suptitle('Regression Results', fontweight='bold')\n",
     "plt.tight_layout()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
     "            bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [],
@@ -358,6 +360,8 @@
     "# plt.gca().yaxis.set_major_locator(plt.NullLocator())\n",
     "plt.show()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
     "            bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
@@ -432,6 +436,8 @@
     "fig.suptitle('Regression Results', fontweight='bold')\n",
     "plt.tight_layout()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
     "            bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
