--- a/notebooks/results_regression_1D.ipynb
+++ b/notebooks/results_regression_1D.ipynb
@@ -264,7 +264,9 @@
     "fig.suptitle('Regression Results - Including 1D Rank.', fontweight='bold')\n",
     "plt.tight_layout()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "            bbox_inches = 'tight', pad_inches = 0)"
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -356,7 +358,8 @@
     "plt.show()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
     "            bbox_inches = 'tight', pad_inches = 0)\n",
-    "\n"
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [
     {
@@ -430,7 +433,9 @@
     "fig.suptitle('Regression Results - Including 1D Rank.', fontweight='bold')\n",
     "plt.tight_layout()\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "            bbox_inches = 'tight', pad_inches = 0)"
+    "            bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "            bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [
     {
