--- a/notebooks/results_regression_exc.ipynb
+++ b/notebooks/results_regression_exc.ipynb
@@ -215,7 +215,11 @@
     "\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
     "fig2.savefig(('../../figures/' + fig2_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
-    "fig3.savefig(('../../figures/' + fig3_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)"
+    "fig3.savefig(('../../figures/' + fig3_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig2.savefig(('../../figures/' + fig2_str + '.png'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig3.savefig(('../../figures/' + fig3_str + '.png'), bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
     {
@@ -304,7 +308,11 @@
     "\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
     "fig2.savefig(('../../figures/' + fig2_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
-    "fig3.savefig(('../../figures/' + fig3_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)"
+    "fig3.savefig(('../../figures/' + fig3_str + '.pdf'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig2.savefig(('../../figures/' + fig2_str + '.png'), bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig3.savefig(('../../figures/' + fig3_str + '.png'), bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
     {
