--- a/notebooks/resutls_corr.ipynb
+++ b/notebooks/resutls_corr.ipynb
@@ -196,7 +196,9 @@
     "plt.tight_layout()\n",
     "fig_str = '%s_corr_results_both_models_hidds' %(ctx_order_str)\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
-    "        bbox_inches = 'tight', pad_inches = 0)\n"
+    "        bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
+    "        bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
     {
@@ -281,6 +283,8 @@
     "plt.show()\n",
     "fig_str = '%s_corr_results_three_models_hidds' %(ctx_order_str)\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
+    "        bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
     "        bbox_inches = 'tight', pad_inches = 0)\n"
    ],
    "outputs": [],
@@ -321,6 +325,8 @@
     "plt.show()\n",
     "fig_str = '%s_corr_results_rnncell_model_hidds' %(ctx_order_str)\n",
     "fig.savefig(('../../figures/' + fig_str + '.pdf'), \n",
+    "        bbox_inches = 'tight', pad_inches = 0)\n",
+    "fig.savefig(('../../figures/' + fig_str + '.png'), \n",
     "        bbox_inches = 'tight', pad_inches = 0)"
    ],
    "outputs": [
