credit assignment exp.

--- a/notebooks/resutls_ratio.ipynb
+++ b/notebooks/resutls_ratio.ipynb
@@ -348,7 +348,7 @@
     "        return dfs\n",
     "\n",
     "\n",
-    "def plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax):\n",
+    "def plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax):\n",
     "        # mi, mx = 1, 2.5\n",
     "        threshold = 1\n",
     "        val_name = \"Ratio(cong/incong)\"\n",
@@ -490,7 +490,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -531,7 +531,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -565,7 +565,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -614,7 +614,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -655,7 +655,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -700,14 +700,14 @@
     "ax = axs[0]\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n",
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n",
     "\n",
     "sub_title  = 'Hidden 2'\n",
     "val_res = ratio_hidds_swmlp[:,:,1] \n",
     "ax = axs[1]\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n",
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n",
     "\n"
    ],
    "outputs": [
@@ -750,7 +750,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -791,7 +791,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -825,7 +825,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -866,7 +866,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
@@ -900,7 +900,7 @@
     "\n",
     "dfs = runs_to_df(run_res, val_res)\n",
     "plot_ratio(ctx_order, ctx_order_str, val_res, model_str, mfig_str, sub_title, ax)\n",
-    "plot_ratio_accs(dfs, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
+    "plot_ratio_accs(dfs, ctx_order, ctx_order_str, is_bar_plot, is_accs_plot, model_str, mfig_str, sub_title, ax)\n"
    ],
    "outputs": [
     {
