--- a/notebooks/resutls_ttest.ipynb
+++ b/notebooks/resutls_ttest.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "source": [
     "import pickle\n",
     "# import statsmodels.api as sm\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "source": [
     "# ctx_order = 'first'\n",
     "analyze_name = 'analyze_ttest'"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "source": [
     "with open('../../results/%s_results_mlp.P' %(analyze_name), 'rb') as f:\n",
     "    mlp_results = pickle.load(f)\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "source": [
     "mlp_runs             = dict_to_list(mlp_results, analyze_name)\n",
     "rnn_runs_ctxF        = dict_to_list(rnn_results_ctxF, analyze_name)\n",
@@ -134,14 +134,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "source": [
     "np.asarray(mlpcc_runs['t_stat_hidd']).shape"
    ],
@@ -154,14 +154,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "source": [
     "val_str = 't_stat_hidd'\n",
     "t_hidds_mlp = np.asarray(mlp_runs[val_str])\n",
@@ -190,7 +190,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 80
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "source": [
     "mi = min(min(np.min(t_hidds_mlp, axis=0)),  \n",
     "         min(np.min(t_hidds_swmlp[:,:,0], axis=0)),\n",
@@ -243,9 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "source": [
-    "def plot_ttest(ctx_order, val, model_str, mfig_str, sub_title, ax):  \n",
+    "def plot_ttest(ctx_order_str, ctx_order, val, model_str, mfig_str, sub_title, ax):  \n",
     "        runs, checkpoints = val.shape[0], val.shape[1]\n",
     "        print('runs, checkpoints: ', runs, checkpoints)\n",
     "        val_name = 'tvals_hidds'\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "source": [
     "figx, figy = 12, 6"
    ],
@@ -300,7 +300,8 @@
     "fig, ax = plt.subplots(figsize=(figx,figy))\n",
     "\n",
     "ctx_order = 'first'\n",
-    "plot_ttest(ctx_order, t_hidds_rnn_ctxF, 'RNN', 'rnn', '', ax)"
+    "# plot_ttest(ctx_order, t_hidds_rnn_ctxF, 'RNN', 'rnn', '', ax)\n",
+    "plot_ttest(ctx_order_str, ctx_order, t_hidds_rnn_ctxF, 'RNN', 'rnn', '', ax)"
    ],
    "outputs": [
     {
