updated result for reg exc, rsa, and credit assignment exps.

--- a/notebooks/results_RSA.ipynb
+++ b/notebooks/results_RSA.ipynb
@@ -202,10 +202,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "def calc_rsa_dis(results, test_data):\n",
+    "def calc_rsa_dis(results, test_data, cp = -1):\n",
     "    y_hat_Es = np.asarray(results['y_hat_E']) # [runs, checkpoints, n_combinations]: [20, 21, 120]\n",
     "    ys = np.asarray(results['y'])\n",
-    "    cp = -1\n",
     "    n_states = test_data.n_states \n",
     "    loc2idx = test_data.loc2idx \n",
     "    idxs = [idx for idx in range(n_states)]\n",
@@ -311,6 +310,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# which checkpoint \n",
+    "cp = -1"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "source": [
     "y_hat_Es = np.asarray(swmlp_cat_runs['y_hat_E']) # [runs, checkpoints, n_combinations]: [20, 21, 120]\n",
@@ -323,7 +332,7 @@
     "    for cp in range(checkpoints):\n",
     "        yhats_swmlp[r,cp,:,:] = y_hat_Es[r,cp]\n",
     "        ys_swmlp[r,cp,:,:] = ys[r,cp]\n",
-    "cp = -1\n",
+    "\n",
     "n_states = test_data.n_states \n",
     "loc2idx = test_data.loc2idx \n",
     "idxs = [idx for idx in range(n_states)]\n",
