--- a/notebooks/results_pca.ipynb
+++ b/notebooks/results_pca.ipynb
@@ -70,7 +70,8 @@
     "    swmlp_results = pickle.load(f)\n",
     "\n",
     "# with open('../../results/%s_%s_results.P' %(analyze_name, dimred_method), 'rb') as f:\n",
-    "#     results = pickle.load(f)"
+    "#     results = pickle.load(f)\n",
+    "# just add the cognitive control "
    ],
    "outputs": [],
    "metadata": {}
