organized some visualizations and add a .py for plots - tried more level of ablation

--- a/notebooks/results_regression_1D.ipynb
+++ b/notebooks/results_regression_1D.ipynb
@@ -61,11 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "source": [
-    "analyze_name = 'analyze_regression_1D'"
+    "analyze_name = 'analyze_regression_1D'\n",
+    "if 'regression' in analyze_name.split('_'):\n",
+    "    print(analyze_name)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "analyze_regression_1D\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
